--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,64 @@
-<h3>Welcome</h3>
+<h3>Bear Territory Housing <img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/11159518_893003047402269_3892198400345350505_n.jpg?oh=15d79082de1e0544c90363b795cdc42b&oe=55D42A90" style="float: left; width: 3%; margin-right: 1%; margin-bottom: 0.5em;">
+</h3>
+
+<center>
+<br><br><br>
+<P>FIND BERKELEY HOUSING QUICK & EASY </P>
 <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+
+   <!-- Carousel
+    ================================================== -->
+
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xpf1/v/t1.0-9/10996664_893003050735602_2494004536785517522_n.jpg?oh=80377ec0581005f4bc20c6c3c171800b&oe=55D7A67A" width="300" alt="DOG">
+      <div class="carousel-caption">
+        <!--<p>DOG</p> -->
+      </div>
+    </div>
+    <div class="item">
+      <img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xtp1/v/t1.0-9/11140407_893003054068935_7538732176871391010_n.jpg?oh=75d25263a4b5da49d661926b526ae244&oe=559A37F5" width="300" alt="BEAR">
+      <div class="carousel-caption">
+        <!--<p>BEAR</p>-->
+      </div>
+    </div>
+    <div class="item">
+      <img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/11205629_893003084068932_157158251939581456_n.jpg?oh=fc2f4103c81dee6d6254079dcf0f3ca6&oe=559A3A36" width="300" alt="HEDGEHOG">
+      <div class="carousel-caption">
+        <!--<p>HEDGEHOG</p>-->
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
+    <!-- Footer
+    ================================================== -->
+
+  <div class="footer">
+    <div class="container">
+      <div class="row">
+        <p>Bear Territory Housing &copy; 2015</p>
+      </div>
+    </div>
+  </div>
