working routes. not working seed.

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -80,3 +80,40 @@ section {
   @extend .btn-primary;
   @extend .btn-xs;
 }
+
+
+.img {
+    position: relative;
+    float: left;
+    width:  100px;
+    height: 100px;
+    background-position: 50% 50%;
+    background-repeat:   no-repeat;
+    background-size:     cover;
+}
+
+#frost {
+   position: absolute;
+    left: 10px;
+    top: 10px;
+    width: 600px;
+    height: 600px;
+    background: rgba(255,255,255,.4);    
+}
+
+#background {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    width: 600px;
+    height: 600px;
+
+    background-image: url(http://placekitten.com/200/300);
+
+    -webkit-filter  : blur(8px);
+    -moz-filter : blur(8px);
+    -ms-filter  : blur(8px);
+    -o-filter   : blur(8px);
+    filter      : blur(8px);
+}
+
