--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -2,6 +2,8 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
+  <%# <li><%= link_to 'Post Listing', post_listing %><%#</li> <%# NEEDS TO BE ADDED %>
+  <%#<li><%= link_to 'Search Listings', get_listings %><%#</li> <%# NEEDS TO BE ADDED %>
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
   <li><%= link_to 'Sign up', new_user_registration_path %></li>
