--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -50,6 +50,19 @@
   </a>
 </div>
 
+<div class="img" style="background-image:url('http://whitneylab.berkeley.edu/images/berkeleycampus.jpg');"></div>
+<div class="img" style="background-image:url('http://calibermag.org/wp-content/uploads/2015/04/featured-image.png');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+
 
 
     <!-- Footer
