--- a/app/views/aptlistings/showaptlistings.html.erb
+++ b/app/views/aptlistings/showaptlistings.html.erb
@@ -1,4 +1,4 @@
-<h3>Listings</h3>
+<h3>Apartment Listings</h3>
 <p>Address: <%= @apt_listing.address if @apt_listing.address %></p>
 <p>Beds: <%= @apt_listing.rooms if @apt_listing.rooms %></p>
 <p>Baths: <%= @apt_listing.baths if @apt_listing.baths %></p>
