full functionality. db still erroring

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,13 +1,12 @@
 <%# add navigation links to this file %>
 <% if user_signed_in? %>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+  <li><%= link_to 'Post Listing', post_listings_path %></li> <%# NEEDS TO BE ADDED %>
+  <li><%= link_to 'Search Listings', all_listings_path %></li> <%# NEEDS TO BE ADDED %>
+  <li><%= link_to 'Roomie Test', sub_listings_roomie_path %></li> <%# NEEDS TO BE ADDED %>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
-  <%# <li><%= link_to 'Post Listing', post_listing %><%#</li> <%# NEEDS TO BE ADDED %>
-  <%#<li><%= link_to 'Search Listings', get_listings %><%#</li> <%# NEEDS TO BE ADDED %>
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
   <li><%= link_to 'Sign up', new_user_registration_path %></li>
 <% end %>
-<% if user_signed_in? %>
-  <li><%= link_to 'Users', users_path %></li>
-<% end %>
+
