--- a/app/views/users/all.html.erb
+++ b/app/views/users/all.html.erb
@@ -1,3 +1,24 @@
 <h1>Are you looking to sublease or find an apartment?</h1>
 <%= link_to "Sublease", apt_listings_path %><br>
 <%= link_to "Apartment", sub_listings_path %>
+
+<h1>All Listings</h1>
+<% @apt_listing.each do |u| %> 
+<h2>Apartments :
+ Address: <%= u.address if u.address %></p>
+<p>Beds: <%= u.rooms if u.rooms %></p>
+<p>Baths: <%= u.baths if u.baths %></p>
+<p>Lease Start Date: <%= u.date if u.date %></p>
+<p>Things to Know: <%= u.details if u.details %></p>
+<p>—————</p>
+<% end %>
+
+<% @sub_listing.each do |u| %>   
+<h2>Sublease :
+  <p>Address: <%= u.address if u.address %></p>
+<p>Beds: <%= u.rooms if u.rooms %></p>
+<p>Baths: <%= u.baths if u.baths %></p>
+<p>Lease Start Date: <%= u.date if u.date %></p>
+<p>Things to Know: <%= u.details if u.details %></p>
+<p>—————</p>
+<% end %>
