--- a/app/views/users/choose.html.erb
+++ b/app/views/users/choose.html.erb
@@ -1,3 +1,8 @@
-<h1>Are you posting about a Subleasing opportunity or an Apartment?</h1>
-<%= link_to "Sublease", apt_listings_new_path %><br>
-<%= link_to "Apartment", sub_listings_new_path %>
+
+<div id="posting" class="postingPage">
+
+	<h1>Are you posting about a Subleasing opportunity or an Apartment?</h1>
+	<%= link_to "Sublease", sub_listings_new_path %><br>
+	<%= link_to "Apartment", apt_listings_new_path %>
+
+</div>
