--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,9 +1,12 @@
-<h3>Bear Territory Housing <img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/11159518_893003047402269_3892198400345350505_n.jpg?oh=15d79082de1e0544c90363b795cdc42b&oe=55D42A90" style="float: left; width: 3%; margin-right: 1%; margin-bottom: 0.5em;">
+
+<div class="main">
+
+<h3 class="text">Bear Territory Housing <img src="https://scontent-sjc.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/11159518_893003047402269_3892198400345350505_n.jpg?oh=15d79082de1e0544c90363b795cdc42b&oe=55D42A90" style="float: left; width: 3%; margin-right: 1%; margin-bottom: 0.5em;">
 </h3>
 
 <center>
 <br><br><br>
-<P>FIND BERKELEY HOUSING QUICK & EASY </P>
+<P class="text">FIND BERKELEY HOUSING QUICK & EASY </P>
 <p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
 
    <!-- Carousel
@@ -50,18 +53,8 @@
   </a>
 </div>
 
-<div class="img" style="background-image:url('http://whitneylab.berkeley.edu/images/berkeleycampus.jpg');"></div>
-<div class="img" style="background-image:url('http://calibermag.org/wp-content/uploads/2015/04/featured-image.png');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
 
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
-<div class="img" style="background-image:url('http://isf.ugis.berkeley.edu/sites/default/files/styles/nivo/public/uc-berkeley.jpg?itok=xSC1b4fn');"></div>
+
 
 
 
@@ -75,3 +68,4 @@
       </div>
     </div>
   </div>
+
