--- a/app/views/sublistings/roomie.html.erb
+++ b/app/views/sublistings/roomie.html.erb
@@ -1,3 +1,13 @@
-<h1>Worried about subletting w/ strangers?</h1>
-<h2>Fear not! Take this roommate compatability test to check if you and the lister are right to live with each other</h2>
+
+<div class="form">
+
+<h1>Worried about living with strangers?</h1>
+<h2>Fear not! Take this roommate compatability test to check if you and the lister are right to live with each other.</h2>
+
+
+<img src="http://www.summerfuel.com/content/images/programs/cap/uc_berkeley/cap_uc_berkeley_student_life_01.jpg"  align="right">
+
 <iframe src="https://docs.google.com/forms/d/1wqW4z742tJaZF5dxKFl1rPQj0MKwl81Iuj_4yRvcW7I/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+
+
+</div>
