--- a/app/views/sublistings/show.html.erb
+++ b/app/views/sublistings/show.html.erb
@@ -17,9 +17,13 @@
 <% @sublisting.each do |u| %>   
 <h2>Sublease :
   <p>Address: <%= u.address if u.address %></p>
+  <p>Price :  <%= u.price if u.price %></p>
 <p>Beds: <%= u.rooms if u.rooms %></p>
 <p>Baths: <%= u.baths if u.baths %></p>
 <p>Lease Start Date: <%= u.date if u.date %></p>
 <p>Things to Know: <%= u.details if u.details %></p>
+
+<%= link_to "Contact User", contact_path %>
+
 <p>—————</p>
 <% end %>
